plugins/kotlin/idea/tests/testData/highlighterJsr305/project/Strict.kt
import foo.A

fun main(a: A) {
    a.field<error descr="[UNSAFE_CALL]">.</error>length
}
